--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,4 @@
-.box {
-  width: 350px;
-  border: 1px solid lightgrey;
-  border-radius: 5px;
-  padding: 10px 20px;
-  margin: 50px auto;
-}
-input {
-  width: 100%;
-  padding: 10px;
-  font-weight: 500;
-  border: 1px solid lightgray;
-  border-radius: 5px;
-  margin-top: 10px;
-  box-sizing: border-box;
-}
-
-input:focus {
-  border: 1px solid royalblue;
-}
-
-button {
-  padding: 10px 20px;
-  font-weight: 600;
-  border: 1px solid lightgray;
-  border-radius: 5px;
-  margin-top: 10px;
-  background-color: black;
-  color: white;
-}
-
-button:hover {
-  border-color: royalblue;
-  background-color: brown;
+body {
+  margin: 0;
+  padding: 0;
 }
